--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
             <p class="team-item-role">Marketing</p>
           </div>
           </li>
-          <li class="team-item-item">
+          <li class="team-item">
             <img src="./images/daniel.jpg" alt="daniel" width="264">
               <div class="team-identity">
             <h3 class="team-item-title">Daniel Wilson</h3>
