--- a/portfolio.html
+++ b/portfolio.html
@@ -12,6 +12,7 @@
   <body>
     <!--navigation section-->
     <header class="header">
+      <div class="container-header container">
       <nav class="header-nav">
         <a class="header-logo" href="/goit-markup-hw-03/index.html"><span class="web">WEB</span>STUDIO</a>
 
@@ -27,6 +28,7 @@
         <li class="adress-list-item"><a class="contact-item-link" href="tel:+11000111-11-11">+11(000) 111-11-11</a></li>
       </ul>
     </address>
+  </div>
     </header>
 
     <!--Main Section-->
@@ -107,7 +109,8 @@
       <div class="container">
       <a class="footer-logo" href="/goit-markup-hw-02/"><span class="web">WEB</span>STUDIO</a>
       <p class="footer-logo-description">Increase the flow of customers and sales for your<br> business with digital marketing & growth solutions.</p>
+    </div>
     </footer>
-  </div>
+  
   </body>
 </html>
