--- a/portfolio.html
+++ b/portfolio.html
@@ -108,7 +108,7 @@
     <footer class="footer">
       <div class="container">
       <a class="footer-logo" href="/goit-markup-hw-02/"><span class="web">WEB</span>STUDIO</a>
-      <p class="footer-logo-description">Increase the flow of customers and sales for your<br> business with digital marketing & growth solutions.</p>
+      <p class="footer-logo-description">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </div>
     </footer>
   
